auto publishing updates to notebooks

--- a/aiyagari_jax.ipynb
+++ b/aiyagari_jax.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4ed2e3f3",
+   "id": "97147bd9",
    "metadata": {},
    "source": [
     "# The Aiyagari Model"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26a57f97",
+   "id": "e3fd2965",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8b2c1b7",
+   "id": "0eb91dd9",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "894c58a5",
+   "id": "8c7b9db2",
    "metadata": {},
    "source": [
     "### References\n",
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c318d17d",
+   "id": "2a1daa07",
    "metadata": {},
    "source": [
     "### Preliminaries\n",
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07f85bfd",
+   "id": "01020644",
    "metadata": {
     "hide-output": false
    },
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "760fc112",
+   "id": "a4d63771",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "638ea08f",
+   "id": "b1adef9d",
    "metadata": {
     "hide-output": false
    },
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b592a931",
+   "id": "ccc3fc44",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -118,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ee4f76d",
+   "id": "9849665a",
    "metadata": {
     "hide-output": false
    },
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea7d7910",
+   "id": "8654d56c",
    "metadata": {},
    "source": [
     "We will use the following function to compute stationary distributions of stochastic matrices.  (For a reference to the algorithm, see p. 88 of [Economic Dynamics](https://johnstachurski.net/edtc).)"
@@ -138,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b809d4b6",
+   "id": "f351d2d0",
    "metadata": {
     "hide-output": false
    },
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea7600b5",
+   "id": "f52b15d1",
    "metadata": {},
    "source": [
     "## Firms\n",
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3604cea7",
+   "id": "f01ff473",
    "metadata": {
     "hide-output": false
    },
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5eac0f8",
+   "id": "3eaab8dd",
    "metadata": {},
    "source": [
     "## Households\n",
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67879768",
+   "id": "3f384bea",
    "metadata": {},
    "source": [
     "### Primitives and Operators\n",
@@ -310,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc3a8b60",
+   "id": "84808134",
    "metadata": {
     "hide-output": false
    },
@@ -349,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fba271df",
+   "id": "1f4465ab",
    "metadata": {
     "hide-output": false
    },
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "207a6573",
+   "id": "21a950f0",
    "metadata": {},
    "source": [
     "This is the vectorized version of the right-hand side of the Bellman equation\n",
@@ -378,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "430cd6b2",
+   "id": "7c115b5f",
    "metadata": {
     "hide-output": false
    },
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "087948fa",
+   "id": "c7ba5022",
    "metadata": {},
    "source": [
     "The next function computes greedy policies."
@@ -418,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "696309bf",
+   "id": "f452a9cc",
    "metadata": {
     "hide-output": false
    },
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e59090e0",
+   "id": "d9de136e",
    "metadata": {},
    "source": [
     "We need to know rewards at a given policy for policy iteration.\n",
@@ -451,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2249566b",
+   "id": "cae54809",
    "metadata": {
     "hide-output": false
    },
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2267c5f4",
+   "id": "a47e97ae",
    "metadata": {},
    "source": [
     "The value $ v_{\\sigma} $ of a policy $ \\sigma $ is defined as\n",
@@ -504,7 +504,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2323fe32",
+   "id": "6afa5966",
    "metadata": {
     "hide-output": false
    },
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "359ca532",
+   "id": "2853de5d",
    "metadata": {},
    "source": [
     "The next function computes the lifetime value of a given policy."
@@ -542,7 +542,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb53d6d4",
+   "id": "79013338",
    "metadata": {
     "hide-output": false
    },
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9db0cd98",
+   "id": "41004eb5",
    "metadata": {},
    "source": [
     "The following function is used for optimistic policy iteration."
@@ -572,7 +572,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce3513f6",
+   "id": "5b1927e2",
    "metadata": {
     "hide-output": false
    },
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04e71785",
+   "id": "9935b868",
    "metadata": {},
    "source": [
     "## Solvers\n",
@@ -618,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbc0af5c",
+   "id": "71885cf0",
    "metadata": {
     "hide-output": false
    },
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c195557",
+   "id": "9c5149ae",
    "metadata": {},
    "source": [
     "We can also solve the problem using optimistic policy iteration."
@@ -655,7 +655,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1eecbd14",
+   "id": "6e451016",
    "metadata": {
     "hide-output": false
    },
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3cca7e15",
+   "id": "10059772",
    "metadata": {},
    "source": [
     "As a first example of what we can do, let’s compute and plot an optimal accumulation policy at fixed prices."
@@ -688,7 +688,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e038dc0e",
+   "id": "2ff728eb",
    "metadata": {
     "hide-output": false
    },
@@ -705,7 +705,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "163eca1d",
+   "id": "daffe118",
    "metadata": {
     "hide-output": false
    },
@@ -719,7 +719,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ff1006f",
+   "id": "37d35894",
    "metadata": {
     "hide-output": false
    },
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77dc4430",
+   "id": "e808957b",
    "metadata": {},
    "source": [
     "The next plot shows asset accumulation policies at different values of the exogenous state."
@@ -741,7 +741,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69d57bf1",
+   "id": "b5176af9",
    "metadata": {
     "hide-output": false
    },
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c54e2b29",
+   "id": "1a6c128c",
    "metadata": {},
    "source": [
     "### Capital Supply\n",
@@ -783,7 +783,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc8db4e8",
+   "id": "1edd0e44",
    "metadata": {
     "hide-output": false
    },
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ef1af88",
+   "id": "3e56246b",
    "metadata": {},
    "source": [
     "Let’s give this a test run."
@@ -831,7 +831,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e3c90a6",
+   "id": "f4c662a1",
    "metadata": {
     "hide-output": false
    },
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2c70aa3",
+   "id": "a0426a1c",
    "metadata": {},
    "source": [
     "The distribution should sum to one:"
@@ -854,7 +854,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "047c33ca",
+   "id": "01691456",
    "metadata": {
     "hide-output": false
    },
@@ -865,7 +865,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2fa4150a",
+   "id": "7b160a6b",
    "metadata": {},
    "source": [
     "Now we are ready to compute capital supply by households given wages and interest rates."
@@ -874,7 +874,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5865421a",
+   "id": "e60015ce",
    "metadata": {
     "hide-output": false
    },
@@ -899,7 +899,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c44cc073",
+   "id": "ce1a23bf",
    "metadata": {},
    "source": [
     "## Equilibrium\n",
@@ -935,7 +935,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68fb0708",
+   "id": "371d81d6",
    "metadata": {},
    "source": [
     "### Visual inspection\n",
@@ -950,7 +950,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "149080c2",
+   "id": "6ed87596",
    "metadata": {
     "hide-output": false
    },
@@ -968,7 +968,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2dada00",
+   "id": "9fb45c6d",
    "metadata": {
     "hide-output": false
    },
@@ -987,7 +987,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3dfb8ecb",
+   "id": "bfc8b2ca",
    "metadata": {
     "hide-output": false
    },
@@ -1008,7 +1008,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24aaa306",
+   "id": "1bcbe025",
    "metadata": {},
    "source": [
     "Here’s a plot of the excess demand function.\n",
@@ -1019,7 +1019,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ee660b5",
+   "id": "fed5d10b",
    "metadata": {
     "hide-output": false
    },
@@ -1035,7 +1035,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3dd65621",
+   "id": "99166c2b",
    "metadata": {
     "hide-output": false
    },
@@ -1051,7 +1051,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ebd69193",
+   "id": "96442adf",
    "metadata": {
     "hide-output": false
    },
@@ -1067,7 +1067,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7dda8cca",
+   "id": "116bebc6",
    "metadata": {},
    "source": [
     "### Computing the equilibrium\n",
@@ -1081,7 +1081,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f8c9834",
+   "id": "268f7ccf",
    "metadata": {
     "hide-output": false
    },
@@ -1108,7 +1108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b708ab79",
+   "id": "fefbbe4f",
    "metadata": {},
    "source": [
     "Now we call the bisection function on excess demand."
@@ -1117,7 +1117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "181ae550",
+   "id": "7a77ef97",
    "metadata": {
     "hide-output": false
    },
@@ -1131,7 +1131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca54d05b",
+   "id": "5c82ee38",
    "metadata": {
     "hide-output": false
    },
@@ -1146,7 +1146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3b9494a",
+   "id": "5208e768",
    "metadata": {},
    "source": [
     "Notice how quickly we can compute the equilibrium capital stock using a simple\n",
@@ -1155,7 +1155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "282c9e20",
+   "id": "29640e38",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -1163,7 +1163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ef629eb",
+   "id": "5bd0f48b",
    "metadata": {},
    "source": [
     "## Exercise 14.1\n",
@@ -1174,7 +1174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00e442c9",
+   "id": "9ffbd50f",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 14.1](https://jax.quantecon.org/#aygr_ex1)"
@@ -1183,7 +1183,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac8f3397",
+   "id": "5e6eb507",
    "metadata": {
     "hide-output": false
    },
@@ -1201,7 +1201,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ba6f95a",
+   "id": "6f2106f4",
    "metadata": {
     "hide-output": false
    },
@@ -1216,7 +1216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b2a955d",
+   "id": "5f7629b6",
    "metadata": {},
    "source": [
     "## Exercise 14.2\n",
@@ -1239,7 +1239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b23fbf8f",
+   "id": "eb6134e5",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 14.2](https://jax.quantecon.org/#aygr_ex2)\n",
@@ -1250,7 +1250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2690059f",
+   "id": "a763a09c",
    "metadata": {
     "hide-output": false
    },
@@ -1263,7 +1263,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8379c80",
+   "id": "2ae3ab49",
    "metadata": {},
    "source": [
     "We need to re-compile all the jitted functions in order notice the change\n",
@@ -1273,7 +1273,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8bb33143",
+   "id": "6647910b",
    "metadata": {
     "hide-output": false
    },
@@ -1291,7 +1291,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6956e85d",
+   "id": "8efdbcff",
    "metadata": {},
    "source": [
     "Now, let’s plot the the demand for capital by firms"
@@ -1300,7 +1300,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "072e32e7",
+   "id": "f3654401",
    "metadata": {
     "hide-output": false
    },
@@ -1326,7 +1326,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e503e81b",
+   "id": "6b07e464",
    "metadata": {
     "hide-output": false
    },
@@ -1347,7 +1347,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "111f58f8",
+   "id": "b695fb30",
    "metadata": {},
    "source": [
     "Compute the equilibrium"
@@ -1356,7 +1356,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0cd9330",
+   "id": "e54823e4",
    "metadata": {
     "hide-output": false
    },
@@ -1371,7 +1371,7 @@
   }
  ],
  "metadata": {
-  "date": 1686803728.5114079,
+  "date": 1688450071.087598,
   "filename": "aiyagari_jax.md",
   "kernelspec": {
    "display_name": "Python",
