--- a/inventory_dynamics.ipynb
+++ b/inventory_dynamics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d03e4300",
+   "id": "445724e6",
    "metadata": {},
    "source": [
     "# Inventory Dynamics"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14ea79a8",
+   "id": "876b6f8f",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0372ae5",
+   "id": "af63f99e",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8a1b33e",
+   "id": "afce6cea",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13a36288",
+   "id": "625aa277",
    "metadata": {
     "hide-output": false
    },
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e201e22e",
+   "id": "a9dfea0d",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4fce249d",
+   "id": "24bed4df",
    "metadata": {
     "hide-output": false
    },
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10c420ef",
+   "id": "783bbd57",
    "metadata": {},
    "source": [
     "## Sample paths\n",
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eafd8d21",
+   "id": "fa4cb050",
    "metadata": {
     "hide-output": false
    },
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec913b99",
+   "id": "d9068c4e",
    "metadata": {},
    "source": [
     "## Example 1: marginal distributions\n",
@@ -162,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bda0bcb9",
+   "id": "f6233f59",
    "metadata": {
     "hide-output": false
    },
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9b4fe57",
+   "id": "c6cbd702",
    "metadata": {},
    "source": [
     "This model for inventory dynamics is asymptotically stationary, with a unique\n",
@@ -227,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e14e8fce",
+   "id": "d5fae066",
    "metadata": {
     "hide-output": false
    },
@@ -257,7 +257,7 @@
     "        _, key = random.split(key)\n",
     "        \n",
     "        # draw a sample at the sample dates\n",
-    "        if (i in sample_dates):\n",
+    "        if (i+1 in sample_dates):\n",
     "          res = jnp.vstack((res, X))\n",
     "\n",
     "    return res[1:]"
@@ -266,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a085d8c",
+   "id": "b7c1ae9d",
    "metadata": {
     "hide-output": false
    },
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f56fd400",
+   "id": "611f84b9",
    "metadata": {},
    "source": [
     "Note that we did not JIT-compile the outer loop, since\n",
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c228b592",
+   "id": "d4f606a6",
    "metadata": {},
    "source": [
     "### Alternative implementation with `lax.scan`\n",
@@ -317,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5579afc",
+   "id": "15453a18",
    "metadata": {
     "hide-output": false
    },
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b788525b",
+   "id": "756586cd",
    "metadata": {},
    "source": [
     "The benefit of the `lax.scan` implementation is that we compile the whole\n",
@@ -368,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9db12b7",
+   "id": "602dd886",
    "metadata": {
     "hide-output": false
    },
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c48a0ffe",
+   "id": "387f91cb",
    "metadata": {},
    "source": [
     "Notice that by $ t=500 $ or $ t=750 $ the densities are barely\n",
@@ -407,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18262964",
+   "id": "e30dddc5",
    "metadata": {
     "hide-output": false
    },
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8520a5a4",
+   "id": "9683a21e",
    "metadata": {},
    "source": [
     "## Example 2: restock frequency\n",
@@ -450,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "168c5a60",
+   "id": "6b4f2e1b",
    "metadata": {
     "hide-output": false
    },
@@ -492,7 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ad271b8",
+   "id": "d44e2915",
    "metadata": {
     "hide-output": false
    },
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98250153",
+   "id": "c97791d1",
    "metadata": {},
    "source": [
     "### Alternative implementation with `lax.scan`\n",
@@ -516,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dadfd173",
+   "id": "5ac3d1cf",
    "metadata": {
     "hide-output": false
    },
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42764596",
+   "id": "bcf5606c",
    "metadata": {},
    "source": [
     "Note the time the routine takes to run, as well as the output"
@@ -572,7 +572,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb999395",
+   "id": "f0ba940d",
    "metadata": {
     "hide-output": false
    },
@@ -584,7 +584,7 @@
   }
  ],
  "metadata": {
-  "date": 1686803728.6764977,
+  "date": 1688450071.2770412,
   "filename": "inventory_dynamics.md",
   "kernelspec": {
    "display_name": "Python",
