--- a/opt_savings.ipynb
+++ b/opt_savings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3adcdee5",
+   "id": "39f9f513",
    "metadata": {},
    "source": [
     "# Optimal Savings"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ba2582f",
+   "id": "6df6137a",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0dc48920",
+   "id": "ad030e40",
    "metadata": {
     "hide-output": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41784db5",
+   "id": "37a6306e",
    "metadata": {},
    "source": [
     "We will use the following imports:"
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3304c8f7",
+   "id": "fd223463",
    "metadata": {
     "hide-output": false
    },
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c57ef0d4",
+   "id": "05d13a4a",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ac982c4",
+   "id": "edb79263",
    "metadata": {
     "hide-output": false
    },
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75322e2e",
+   "id": "697e254a",
    "metadata": {},
    "source": [
     "Use 64 bit floats with JAX in order to match NumPy code\n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ebd907b",
+   "id": "598a2548",
    "metadata": {
     "hide-output": false
    },
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aecd7f95",
+   "id": "f4a5a61d",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8114fdad",
+   "id": "c42a27d1",
    "metadata": {
     "hide-output": false
    },
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18880cea",
+   "id": "bcd60700",
    "metadata": {},
    "source": [
     "## Model primitives\n",
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ab7f08d",
+   "id": "feec97ea",
    "metadata": {
     "hide-output": false
    },
@@ -192,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a13ce85",
+   "id": "ce275a63",
    "metadata": {
     "hide-output": false
    },
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1a83215",
+   "id": "88a6d65e",
    "metadata": {
     "hide-output": false
    },
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d2c0606",
+   "id": "54ef495a",
    "metadata": {},
    "source": [
     "Here’s the right hand side of the Bellman equation:"
@@ -255,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fdb24e59",
+   "id": "3e0a8fac",
    "metadata": {
     "hide-output": false
    },
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1553a183",
+   "id": "f64f9ae7",
    "metadata": {},
    "source": [
     "## Operators\n",
@@ -304,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2a15e32",
+   "id": "1a28d636",
    "metadata": {
     "hide-output": false
    },
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61b554c9",
+   "id": "9595b47d",
    "metadata": {
     "hide-output": false
    },
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "945c7210",
+   "id": "6f071291",
    "metadata": {},
    "source": [
     "and the Bellman operator $ T $"
@@ -376,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1658814",
+   "id": "69d0e829",
    "metadata": {
     "hide-output": false
    },
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dca5bd5f",
+   "id": "521bc193",
    "metadata": {},
    "source": [
     "The next function computes a $ v $-greedy policy given $ v $"
@@ -398,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6c41ccf",
+   "id": "ad5d06be",
    "metadata": {
     "hide-output": false
    },
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "345e2f89",
+   "id": "50bd9cc7",
    "metadata": {},
    "source": [
     "The function below computes the value $ v_\\sigma $ of following policy $ \\sigma $.\n",
@@ -450,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b77bba6",
+   "id": "3ef33250",
    "metadata": {
     "hide-output": false
    },
@@ -475,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9d1e1c2",
+   "id": "4d82b016",
    "metadata": {
     "hide-output": false
    },
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18f0905a",
+   "id": "e0a6af76",
    "metadata": {},
    "source": [
     "## JIT compiled versions"
@@ -527,7 +527,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3138c911",
+   "id": "0d2e12f3",
    "metadata": {
     "hide-output": false
    },
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14f64f52",
+   "id": "2af0362c",
    "metadata": {},
    "source": [
     "## Solvers\n",
@@ -555,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ff77e32",
+   "id": "aa0e9eae",
    "metadata": {
     "hide-output": false
    },
@@ -575,7 +575,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7cae8d6",
+   "id": "4cf136f4",
    "metadata": {
     "hide-output": false
    },
@@ -600,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75407998",
+   "id": "6fb61d3a",
    "metadata": {
     "hide-output": false
    },
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b120282",
+   "id": "d1b87a5f",
    "metadata": {},
    "source": [
     "## Plots\n",
@@ -633,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51648991",
+   "id": "d8366f96",
    "metadata": {
     "hide-output": false
    },
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed3ac578",
+   "id": "b773ebe3",
    "metadata": {},
    "source": [
     "## Tests\n",
@@ -668,7 +668,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36495573",
+   "id": "86c3c31a",
    "metadata": {
     "hide-output": false
    },
@@ -680,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6068e4dd",
+   "id": "6012bf24",
    "metadata": {
     "hide-output": false
    },
@@ -696,7 +696,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3fc75d8",
+   "id": "598fe51d",
    "metadata": {
     "hide-output": false
    },
@@ -712,7 +712,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8456e50d",
+   "id": "75ffb5ef",
    "metadata": {
     "hide-output": false
    },
@@ -728,7 +728,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eba484e0",
+   "id": "dd94b2d4",
    "metadata": {
     "hide-output": false
    },
@@ -764,7 +764,7 @@
   }
  ],
  "metadata": {
-  "date": 1686803729.1565971,
+  "date": 1688450071.734216,
   "filename": "opt_savings.md",
   "kernelspec": {
    "display_name": "Python",
