--- a/status.ipynb
+++ b/status.ipynb
@@ -2,32 +2,33 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d3436cab",
+   "id": "49fdaf8b",
    "metadata": {},
    "source": [
     "# Execution Statistics\n",
     "\n",
     "This table contains the latest execution statistics.\n",
     "\n",
-    "[](https://jax.quantecon.org/aiyagari_jax.html)[](https://jax.quantecon.org/arellano.html)[](https://jax.quantecon.org/ifp_egm.html)[](https://jax.quantecon.org/intro.html)[](https://jax.quantecon.org/inventory_dynamics.html)[](https://jax.quantecon.org/jax_intro.html)[](https://jax.quantecon.org/kesten_processes.html)[](https://jax.quantecon.org/markov_asset.html)[](https://jax.quantecon.org/mle.html)[](https://jax.quantecon.org/newtons_method.html)[](https://jax.quantecon.org/opt_invest.html)[](https://jax.quantecon.org/opt_savings.html)[](https://jax.quantecon.org/short_path.html)[](https://jax.quantecon.org/.html)[](https://jax.quantecon.org/troubleshooting.html)[](https://jax.quantecon.org/wealth_dynamics.html)[](https://jax.quantecon.org/zreferences.html)|Document|Modified|Method|Run Time (s)|Status|\n",
+    "[](https://jax.quantecon.org/aiyagari_jax.html)[](https://jax.quantecon.org/arellano.html)[](https://jax.quantecon.org/cake_eating_numerical.html)[](https://jax.quantecon.org/ifp_egm.html)[](https://jax.quantecon.org/intro.html)[](https://jax.quantecon.org/inventory_dynamics.html)[](https://jax.quantecon.org/jax_intro.html)[](https://jax.quantecon.org/kesten_processes.html)[](https://jax.quantecon.org/markov_asset.html)[](https://jax.quantecon.org/mle.html)[](https://jax.quantecon.org/newtons_method.html)[](https://jax.quantecon.org/opt_invest.html)[](https://jax.quantecon.org/opt_savings.html)[](https://jax.quantecon.org/short_path.html)[](https://jax.quantecon.org/.html)[](https://jax.quantecon.org/troubleshooting.html)[](https://jax.quantecon.org/wealth_dynamics.html)[](https://jax.quantecon.org/zreferences.html)|Document|Modified|Method|Run Time (s)|Status|\n",
     "|:------------------:|:------------------:|:------------------:|:------------------:|:------------------:|\n",
-    "|aiyagari_jax|2023-06-05 09:58|cache|58.81|✅|\n",
-    "|arellano|2023-06-05 09:58|cache|35.81|✅|\n",
-    "|ifp_egm|2023-06-05 10:00|cache|72.04|✅|\n",
-    "|intro|2023-06-05 10:00|cache|1.41|✅|\n",
-    "|inventory_dynamics|2023-06-05 10:06|cache|357.14|✅|\n",
-    "|jax_intro|2023-06-05 10:06|cache|36.75|✅|\n",
-    "|kesten_processes|2023-06-05 10:07|cache|29.03|✅|\n",
-    "|markov_asset|2023-06-05 10:07|cache|21.83|✅|\n",
-    "|mle|2023-06-05 10:07|cache|19.63|✅|\n",
-    "|newtons_method|2023-06-05 10:10|cache|165.07|✅|\n",
-    "|opt_invest|2023-06-05 10:13|cache|186.08|✅|\n",
-    "|opt_savings|2023-06-05 10:14|cache|60.77|✅|\n",
-    "|short_path|2023-06-05 10:14|cache|9.84|✅|\n",
-    "|status|2023-06-05 10:15|cache|3.9|✅|\n",
-    "|troubleshooting|2023-06-05 10:00|cache|1.41|✅|\n",
-    "|wealth_dynamics|2023-06-05 10:15|cache|36.03|✅|\n",
-    "|zreferences|2023-06-05 10:00|cache|1.41|✅|\n",
+    "|aiyagari_jax|2023-06-29 09:31|cache|59.06|✅|\n",
+    "|arellano|2023-06-29 09:32|cache|36.03|✅|\n",
+    "|cake_eating_numerical|2023-06-29 09:32|cache|38.03|✅|\n",
+    "|ifp_egm|2023-06-29 09:34|cache|71.64|✅|\n",
+    "|intro|2023-06-29 09:34|cache|1.38|✅|\n",
+    "|inventory_dynamics|2023-06-29 09:40|cache|360.11|✅|\n",
+    "|jax_intro|2023-06-29 09:40|cache|37.67|✅|\n",
+    "|kesten_processes|2023-06-29 09:41|cache|28.72|✅|\n",
+    "|markov_asset|2023-06-29 09:41|cache|25.03|✅|\n",
+    "|mle|2023-06-29 09:41|cache|19.61|✅|\n",
+    "|newtons_method|2023-06-29 09:44|cache|165.08|✅|\n",
+    "|opt_invest|2023-06-29 09:47|cache|184.66|✅|\n",
+    "|opt_savings|2023-06-29 09:48|cache|56.04|✅|\n",
+    "|short_path|2023-06-29 09:48|cache|9.64|✅|\n",
+    "|status|2023-06-29 09:48|cache|3.92|✅|\n",
+    "|troubleshooting|2023-06-29 09:34|cache|1.38|✅|\n",
+    "|wealth_dynamics|2023-06-29 09:49|cache|35.84|✅|\n",
+    "|zreferences|2023-06-29 09:34|cache|1.38|✅|\n",
     "\n",
     "<a id='status-machine-details'></a>\n",
     "These lectures are built on `linux` instances through `github actions`  and `amazon web services (aws)` to\n",
@@ -40,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac1721b9",
+   "id": "053b8588",
    "metadata": {
     "hide-output": false
    },
@@ -53,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "628a6dbe",
+   "id": "2a5a0180",
    "metadata": {},
    "source": [
     "and the hardware we are running on:"
@@ -62,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f89806fc",
+   "id": "e266f938",
    "metadata": {
     "hide-output": false
    },
@@ -73,7 +74,7 @@
   }
  ],
  "metadata": {
-  "date": 1686803729.2096946,
+  "date": 1688450071.7844782,
   "filename": "status.md",
   "kernelspec": {
    "display_name": "Python",
