--- a/troubleshooting.ipynb
+++ b/troubleshooting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e34fd3d1",
+   "id": "c9e2691c",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1430deed",
+   "id": "88a8e95f",
    "metadata": {},
    "source": [
     "# Troubleshooting"
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "895cc0f0",
+   "id": "f0f47b4c",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19b1d931",
+   "id": "b57f3e5e",
    "metadata": {},
    "source": [
     "This page is for readers experiencing errors when running the code from the lectures."
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5782a16d",
+   "id": "ec8c3ee9",
    "metadata": {},
    "source": [
     "## Fixing Your Local Environment\n",
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b660eaa",
+   "id": "8951a402",
    "metadata": {},
    "source": [
     "## Reporting an Issue\n",
@@ -98,7 +98,7 @@
   }
  ],
  "metadata": {
-  "date": 1686803729.2170188,
+  "date": 1688450071.791637,
   "filename": "troubleshooting.md",
   "kernelspec": {
    "display_name": "Python",
