--- a/intro.ipynb
+++ b/intro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "79d3a5c1",
+   "id": "0cd61e74",
    "metadata": {},
    "source": [
     "# Quantitative Economics with JAX\n",
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7582996",
+   "id": "f71c503d",
    "metadata": {},
    "source": [
     "# Introduction\n",
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22d44e22",
+   "id": "9a0153fe",
    "metadata": {},
    "source": [
     "# Simulation\n",
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "732e8d19",
+   "id": "af396ffe",
    "metadata": {},
    "source": [
     "# Data and Empirics\n",
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5a3f3d0",
+   "id": "59bbe479",
    "metadata": {},
    "source": [
     "# Dynamic Programming\n",
@@ -60,12 +60,13 @@
     "- [Optimal Savings](https://jax.quantecon.org/opt_savings.html)\n",
     "- [Endogenous Grid Method](https://jax.quantecon.org/ifp_egm.html)\n",
     "- [Default Risk and Income Fluctuations](https://jax.quantecon.org/arellano.html)\n",
-    "- [The Aiyagari Model](https://jax.quantecon.org/aiyagari_jax.html)"
+    "- [The Aiyagari Model](https://jax.quantecon.org/aiyagari_jax.html)\n",
+    "- [Cake Eating: Numerical Methods](https://jax.quantecon.org/cake_eating_numerical.html)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0ca1b2c3",
+   "id": "9cfaccea",
    "metadata": {},
    "source": [
     "# Other\n",
@@ -77,7 +78,7 @@
   }
  ],
  "metadata": {
-  "date": 1686803728.6480818,
+  "date": 1688450071.2509968,
   "filename": "intro.md",
   "kernelspec": {
    "display_name": "Python",
